--- a/cours/Convertisseurs.ipynb
+++ b/cours/Convertisseurs.ipynb
@@ -23,6 +23,19 @@
      ]
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "$\\phi b_0 b_1$, $\\phi b_0$, $\\phi b_0 \\oplus b_1$, $\\phi \\bar b_0$, $\\phi \\bar b_0 \\bar b_1$\n",
+      "\n",
+      "$S_A = \\bar S_B = b_1$\n",
+      "\n",
+      "$S_{M+i} = b_{M+1}$\n",
+      "\n",
+      "$S_F = \\phi$"
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [],
