vfill sur la page de titre dans le skell

--- a/skel.tex
+++ b/skel.tex
@@ -36,11 +36,11 @@
 \begin{titlepage}
     \setcounter{page}{0}
     \maketitle
+    \vfill
+    \tableofcontents
     \thispagestyle{empty}
 \end{titlepage}
 
-\tableofcontents
 
 
 \end{document}
-
