Rapport de la seconde séance de cadence…

--- a/cadence/rapport.tex
+++ b/cadence/rapport.tex
@@ -27,7 +27,7 @@
 \usepackage{verbatim}
 \usepackage{xunicode,xltxtra}
 
-\title{\includegraphics{../../../images/inp-enseeiht} \\ ~ \\ ~ \\ ~ \\ ~ \\ Initiation cadence layout XL}
+\title{\includegraphics{../../images/inp-enseeiht} \\ ~ \\ ~ \\ ~ \\ ~ \\ Initiation cadence layout XL}
 \author{François Pierron \& Guilhem Saurel}
 \date{\oldstylenums{\today}}
 
@@ -43,27 +43,27 @@
 
 \section{Design and Simulation of the electrical schematic of the operational amplifier (Cadence Composer schematic editor and Spectre)}
 
-\begin{table}[|l|c|}
+\begin{tabular}{|l|r|}
     \hline
     Electrical Characteristics & simulation Results \\
     \hline
-    Power Consumption & \\
+    Power Consumption & 10.2mW\\
     \hline
-    Open Loop Gain & \\
+    Open Loop Gain & 49dB\\
     \hline
-    Bandwidth & \\
+    Bandwidth & 3.14MHz\\
     \hline
-    Offset & \\
+    Offset & 22mV\\
     \hline
-    Input Voltage nois (Power spectrum Density) & \\
+    Input Voltage nois (Power spectrum Density) & 7mV \\
     \hline
-    Phase Margin & \\
+    Phase Margin & 53°\\
     \hline
-    Gain Margin & \\
+    Gain Margin & 27dB\\
     \hline
-    Slew Rate & \\
+    Slew Rate & 1.155V/ns\\
     \hline
-\end{table}
+\end{tabular}
 
 
 \section{Layout of the schematic using the technology rule sets provided by the fondery AMS for this 0.35$\mu$m CMOS process}
